# debug

./: .gitignore  CMakeLists.txt  README.md  vix.json
examples/: CMakeLists.txt  basic.cpp
include/rix/: debug.hpp
include/rix/debug/: format.hpp  inspect.hpp  log.hpp  print.hpp  traits.hpp
tests/: CMakeLists.txt  debug_tests.cpp
